--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,74 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.suishouji.MainActivity"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.suishouji.MainActivity">
+    >
     <ScrollView
         android:layout_weight="1"
         android:scrollbars="none"
         android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="0dp">
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-           <FrameLayout
-               android:id="@+id/main_top_frame_layout"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content">
-           </FrameLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <FrameLayout
+                android:id="@+id/main_top_frame_layout"
+                android:layout_width="match_parent"
+                android:layout_height="200dp">
+            </FrameLayout>
 
-           <LinearLayout
-               android:id="@+id/main_btn_layout"
-               android:layout_below="@+id/main_content_layout"
-               android:layout_margin="6dp"
-               android:layout_centerHorizontal="true"
-               android:orientation="horizontal"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
-               <Button
-                   android:id="@+id/main_write_note"
-                   android:layout_weight="1"
-                   android:layout_width="0dp"
-                   android:textColor="#fff"
-                   android:layout_height="50dp"
-                   android:background="@drawable/main_write_note_background"
-                   android:text="记一笔"/>
-               <ImageView
-                   android:layout_margin="0dp"
-                   android:id="@+id/main_write"
-                   android:padding="0dp"
-                   android:layout_width="50dp"
-                   android:layout_height="50dp"
-                   android:scaleType="centerInside"
-                   android:src="@drawable/assistant_spirit_magic_white"
-                   android:background="@drawable/main_write_background"
-                   />
-           </LinearLayout>
-           <View
-               android:layout_width="match_parent"
-               android:layout_above="@+id/main_rv_list"
-               android:layout_height="1dp"
-               android:background="@color/colorRecyclerDivider"/>
+            <LinearLayout
+                android:id="@+id/main_btn_layout"
+                android:layout_below="@+id/main_top_frame_layout"
+                android:layout_margin="6dp"
+                android:layout_centerHorizontal="true"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/main_write_note"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:textColor="#fff"
+                    android:layout_height="50dp"
+                    android:background="@drawable/main_write_note_background"
+                    android:text="记一笔"/>
+                <ImageView
+                    android:layout_margin="0dp"
+                    android:id="@+id/main_write"
+                    android:padding="0dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/assistant_spirit_magic_white"
+                    android:background="@drawable/main_write_background"
+                    />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_above="@+id/main_rv_list"
+                android:layout_height="1dp"
+                android:background="@color/colorRecyclerDivider"/>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_rv_list"
                 android:layout_below="@+id/main_btn_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
-           <Button
-               android:layout_centerHorizontal="true"
-               android:layout_below="@+id/main_rv_list"
-               android:id="@+id/main_custom_made_btn"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginBottom="10dp"
-               android:layout_marginTop="10dp"
-               android:text="定制下看板"/>
+            <Button
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/main_rv_list"
+                android:id="@+id/main_custom_made_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:text="定制下看板"/>
 
-
-       </RelativeLayout>
+        </RelativeLayout>
     </ScrollView>
 
     <LinearLayout
@@ -77,9 +79,10 @@
         >
         <ImageView
             android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:src="@drawable/main_point"/>
         <LinearLayout android:id="@+id/main_bottom_tab_0"
             style="@style/main_bottom_tab_item_layout">
             <ImageView
@@ -134,8 +137,7 @@
             <ImageView
                 android:id="@+id/main_bottom_tab_iv_4"
                 style="@style/main_bottom_tab_iv"
-                android:src="@drawable/nav_setting_4"
-                />
+                android:src="@drawable/nav_setting_4" />
             <TextView
                 android:id="@+id/main_bottom_tab_tv_4"
                 style="@style/main_bottom_tab_tv"
