--- a/app/src/main/res/layout/main_recycler_item.xml
+++ b/app/src/main/res/layout/main_recycler_item.xml
@@ -1,68 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:padding="6dp"
+    android:clickable="true"
+    android:background="@drawable/main_recycler_item_click_background"
    >
     <ImageView
         android:id="@+id/main_recycler_item_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:src="@drawable/nav_finance_3"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="6dp"
+        android:src="@drawable/icon_trans_item_month"
         />
     <LinearLayout
-        android:layout_toRightOf="@+id/main_recycler_item_iv"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:id="@+id/main_title_layout"
-        android:layout_centerVertical="true"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/main_recycler_item_title_tv"
             android:layout_width="wrap_content"
-            android:textStyle="bold"
+            android:textColor="#3a4143"
             android:layout_height="wrap_content"
+            android:textSize="14sp"
             android:text="今天"/>
         <TextView
             android:id="@+id/main_recycler_item_time_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#767e89"
+            android:textSize="12sp"
             android:text="2016年10月18号 "/>
     </LinearLayout>
 
     <LinearLayout
+        android:layout_gravity="center_vertical"
         android:id="@+id/main_item_outlay_layout"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/main_recycler_item_icon_iv"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/main_recycler_item_budget_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/main_recycler_item_budget_tv"
             android:text="00.00"/>
         <TextView
             android:id="@+id/main_recycler_item_outlay_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/main_recycler_item_outlay_tv"
             android:text="00.00"
             />
     </LinearLayout>
     <TextView
+        android:layout_gravity="center_vertical"
         android:id="@+id/main_recycler_item_financing_tv"
         android:visibility="gone"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/main_recycler_item_icon_iv"
+        android:textColor="#f78400"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="8888理财金" />
     <ImageView
         android:id="@+id/main_recycler_item_icon_iv"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:layout_margin="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/finance_wallet_arrow_right"/>
-</RelativeLayout>
+</LinearLayout>
