--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,4 +75,17 @@
         <item name="android:layout_width">20dp</item>
         <item name="android:layout_height">20dp</item>
     </style>
+
+    <style name="main_recycler_item_tv_base">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="main_recycler_item_outlay_tv" parent="main_recycler_item_tv_base">
+        <item name="android:textColor">@color/main_recycler_item_outlay_tv</item>
+    </style>
+    <style name="main_recycler_item_budget_tv" parent="main_recycler_item_tv_base">
+        <item name="android:textColor">@color/main_recycler_item_budget_tv</item>
+    </style>
+
 </resources>
