--- a/app/src/main/res/layout/main_menu_layout.xml
+++ b/app/src/main/res/layout/main_menu_layout.xml
@@ -1,7 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#555fff"
+    android:background="#fff"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/menu_user_message_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <com.example.suishouji.view.RoundImageView
+            android:layout_margin="20dp"
+            android:id="@+id/menu_user_head_iv"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/icon_avatar_asking"/>
+        <LinearLayout
+            android:layout_toRightOf="@+id/menu_user_head_iv"
+            android:layout_centerVertical="true"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/menu_user_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#000"
+                android:text="name"/>
+            <TextView
+                android:id="@+id/menu_user_account_tv"
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="account"/>
+        </LinearLayout>
+    </RelativeLayout>
+    <ImageView
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@id/menu_user_message_layout"
+        android:layout_alignBottom="@+id/menu_user_message_layout"
+        android:id="@+id/menu_user_upload_iv"
+        android:layout_marginRight="20dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/select_menu_upload_iv"/>
+    <View
+        android:layout_below="@+id/menu_user_message_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#e4e4e4" />
+    <TextView
+        android:id="@+id/menu_sync_title_tv"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_below="@+id/menu_user_message_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="同步账本"/>
+    <ListView
+        android:id="@+id/menu_notes_list_view"
+        android:layout_below="@+id/menu_sync_title_tv"
+        android:layout_above="@+id/menu_bottom_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:id="@+id/menu_bottom_layout"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <FrameLayout
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:onClick="textViewclick"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:clickable="true"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/selector_menu_bottom_btn_edit_image"
+                android:textColor="@drawable/selector_menu_bottom_btn_text_color"
+                android:text="编辑"/>
+        </FrameLayout>
 
-</LinearLayout>
+        <View
+            android:layout_width="0.5dp"
+            android:background="#e4e4e4"
+            android:layout_height="match_parent"
+            />
+        <FrameLayout
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/text1"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:clickable="true"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/selector_menu_bottom_btn_add_image"
+                android:textColor="@drawable/selector_menu_bottom_btn_text_color"
+                android:text="添加"/>
+        </FrameLayout>
+    </LinearLayout>
+</RelativeLayout>
