--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,7 @@
     tools:context="com.example.suishouji.MainActivity"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
     <ScrollView
         android:layout_weight="1"
         android:scrollbars="none"
@@ -77,9 +76,12 @@
         android:id="@+id/main_bottom_tab"
         style="@style/main_bottom_tab_layout"
         >
-        <ImageView
+        <ImageButton
+            android:id="@+id/main_bottom_show_menu_iv"
             android:layout_gravity="center"
             android:layout_width="50dp"
+            android:clickable="true"
+            android:background="#00ffffff"
             android:layout_height="match_parent"
             android:padding="10dp"
             android:src="@drawable/main_point"/>
