--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,14 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorRecyclerDivider">#e4e4e4</color>
     <color name="colorText">#fff</color>
+    <color name="colorTextDefault">#434343</color>
     <color name="main_bottom_tab_background">#5c5e61</color>
     <color name="main_recycler_item_pressed_true">#70fffd83</color>
     <color name="main_recycler_item_pressed_false">#fff</color>
 
     <color name="main_recycler_item_outlay_tv">#33916f</color>
     <color name="main_recycler_item_budget_tv">#b75144</color>
+
+    <color name="menu_bottom_btn_text_true_color">#f78b00</color>
+    <color name="menu_bottom_btn_text_false_color">#d1b086</color>
 </resources>
