--- a/app/src/main/res/layout/activity_cost.xml
+++ b/app/src/main/res/layout/activity_cost.xml
@@ -6,30 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.suishouji.CostActivity">
     <FrameLayout
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"
-        android:background="@color/cost_top_background"
-        android:layout_height="?actionBarSize">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/abc_ic_ab_back_holo_dark"/>
-            <TextView
-                android:id="@+id/cost_title_tv"
-                android:textColor="@color/cost_top_text_color"
-                android:layout_marginLeft="4dp"
-                android:textSize="18sp"
-                android:layout_gravity="center_vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2018年"/>
-        </LinearLayout>
+        style="@style/action_bar_style">
+        <include layout="@layout/action_bar_title"/>
         <LinearLayout
             android:layout_gravity="right"
             android:orientation="horizontal"
@@ -37,25 +15,15 @@
             android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/cost_menu_search_iv"
-                android:layout_gravity="center_vertical"
-                android:layout_width="26dp"
-                android:layout_marginRight="20dp"
-                android:layout_height="26dp"
+                style="@style/action_bar_icon_style"
                 android:src="@drawable/cost_menu_search"/>
             <ImageView
                 android:id="@+id/cost_menu_add_iv"
-                android:layout_gravity="center_vertical"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginRight="20dp"
-                android:scaleType="center"
+                style="@style/action_bar_icon_style"
                 android:src="@drawable/cost_menu_add_0"/>
             <ImageView
                 android:id="@+id/cost_menu_other_iv"
-                android:layout_gravity="center_vertical"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_marginRight="10dp"
+                style="@style/action_bar_icon_style"
                 android:src="@drawable/icon_action_bar_more"/>
         </LinearLayout>
 
@@ -68,7 +36,7 @@
         android:layout_height="fill_parent"
         ptr:ptrAnimationStyle="flip"
         ptr:ptrDrawable="@drawable/pull_indicator_arrow"
-        ptr:ptrHeaderTextColor="@color/cost_top_text_color"
+        ptr:ptrHeaderTextColor="@color/action_bar_text_color"
         ptr:ptrMode="both" >
         <LinearLayout
             android:orientation="vertical"
