--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -88,7 +88,7 @@
     </style>
 
     <style name="cost_top_base_tv">
-        <item name="android:textColor">@color/cost_top_text_color</item>
+        <item name="android:textColor">@color/action_bar_text_color</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">14sp</item>
@@ -96,6 +96,28 @@
     <style name="cost_top_number_tv" parent="cost_top_base_tv">
         <item name="android:textSize">30sp</item>
     </style>
-
+    <style name="action_bar_icon_style">
+        <item name="android:padding">@dimen/action_bar_icon_padding</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:scaleType">centerInside</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_gravity">center_vertical</item>
+    </style>
+    <style name="action_bar_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?actionBarSize</item>
+        <item name="android:background">@color/cost_top_background</item>
+    </style>
+    <style name="action_bar_title_style">
+        <item name="android:textColor">@color/action_bar_text_color</item>
+        <item name="android:layout_marginLeft">@dimen/action_bar_text_padding_left</item>
+        <item name="android:textSize">@dimen/action_bar_text_size</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="icon_text_color">
+        <item name="android:textColor">#fff</item>
+    </style>
 
 </resources>
