--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorRecyclerDivider">#e4e4e4</color>
+    <color name="view_color">#e4e4e4</color>
     <color name="colorText">#fff</color>
     <color name="colorTextDefault">#434343</color>
     <color name="main_bottom_tab_background">#5c5e61</color>
@@ -17,5 +17,9 @@
     <color name="menu_bottom_btn_text_false_color">#d1b086</color>
     
     <color name="cost_top_background">#fbcd45</color>
-    <color name="cost_top_text_color">#b45724</color>
+    <color name="action_bar_text_color">#b45724</color>
+
+    <color name="button_click_background">#fff8d7</color>
+
+    <color name="base_background">#f8f8f8</color>
 </resources>
