--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="action_bar_text_size">18sp</dimen>
+    <dimen name="action_bar_text_padding_left">4dp</dimen>
+    <dimen name="action_bar_padding">10dp</dimen>
+    <dimen name="action_bar_icon_size">26dp</dimen>
+    <dimen name="action_bar_icon_padding">10dp</dimen>
+
+    <dimen name="view_divider">1dp</dimen>
+
+    <dimen name="text_view_base_size">14sp</dimen>
 </resources>
