--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,10 +97,10 @@
         <item name="android:textSize">30sp</item>
     </style>
     <style name="action_bar_icon_style">
-        <item name="android:padding">@dimen/action_bar_icon_padding</item>
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_margin">@dimen/action_bar_icon_padding</item>
+        <item name="android:layout_width">@dimen/action_bar_icon_size</item>
         <item name="android:scaleType">centerInside</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">@dimen/action_bar_icon_size</item>
         <item name="android:layout_gravity">center_vertical</item>
     </style>
     <style name="action_bar_style">
@@ -109,7 +109,7 @@
         <item name="android:background">@color/cost_top_background</item>
     </style>
     <style name="action_bar_title_style">
-        <item name="android:textColor">@color/action_bar_text_color</item>
+        <item name="android:textColor">@color/select_action_bar_click_color</item>
         <item name="android:layout_marginLeft">@dimen/action_bar_text_padding_left</item>
         <item name="android:textSize">@dimen/action_bar_text_size</item>
         <item name="android:layout_gravity">center_vertical</item>
@@ -119,5 +119,7 @@
     <style name="icon_text_color">
         <item name="android:textColor">#fff</item>
     </style>
+
+
 
 </resources>
